--- a/webapp/package.json
+++ b/webapp/package.json
@@ -9,9 +9,11 @@
   },
   "dependencies": {
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "scss": "^0.2.4"
   },
   "devDependencies": {
+    "@types/node": "^17.0.33",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
